--- a/backendoee/src/main/resources/application.properties
+++ b/backendoee/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 # https://docs.spring.io/spring-boot/docs/current/reference/html/application-properties.html -> porpiedades
 #https://www.youtube.com/watch?v=pxvWC5qAD_g
-
-spring.data.mongodb.host=localhost
-#spring.data.mongodb.host=mongodb
+#spring.data.mongodb.host=localhost
+spring.data.mongodb.host=mongodb
 spring.data.mongodb.port=27017
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.username=devroot
 spring.data.mongodb.password=devroot
 spring.data.mongodb.database=oeebbdd
 spring.data.mongodb.repositories.enabled=true
-#spring.data.mongodb.uri=mongodb://localhost:27017/oeebbdd
 
+server.servlet.session.timeout=60s
+server.servlet.session.persistent=true
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 server.port=8080
 
